--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -559,7 +559,7 @@
     <string name="clean_reset_next_clean_date">Reset Next Clean Date</string>
     <string name="clean_mode">Cleaning Mode</string>
     <string name="clean_cleaning_period">Cleaning Period</string>
-    <string name="clean_set_time">Cleaning Time</string>
+    <string name="clean_cleaning_time">Cleaning Time</string>
     <string name="clean_time_tolerance">Cleaning Time Tolerance</string>
     <string name="clean_weekend_clean_mode">Weekend Cleaning Mode</string>
     <string name="clean_milk_weekend_clean_mode">Milk Weekend Cleaning Mode</string>
