bugfix:22566 修改文案未适配问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,7 +115,7 @@
     <string name="statistic_off">Off</string>
     <string name="statistic_yes">Yes</string>
     <string name="statistic_no">No</string>
-    <string name="statistic_absolute_counter">Absolut Counter:</string>
+    <string name="statistic_absolute_counter">Absolute Counter:</string>
     <string name="statistic_total_water_quantity">Total Water Quantity:</string>
     <string name="statistic_total_water_products">Total Water Products:</string>
     <string name="statistic_total_water_rinse">Total Water Rinse:</string>
