--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -111,7 +111,7 @@
     <string name="statistic_off">关</string>
     <string name="statistic_yes">是</string>
     <string name="statistic_no">否</string>
-    <string name="statistic_absolute_counter">Absolut Counter:</string>
+    <string name="statistic_absolute_counter">绝对计数器:</string>
     <string name="statistic_total_water_quantity">总用水量:</string>
     <string name="statistic_total_water_products">饮品总用水量:</string>
     <string name="statistic_total_water_rinse">冲水总用水量:</string>
@@ -125,13 +125,9 @@
     <string name="statistic_time_steam_left">左蒸汽棒总用时:</string>
     <string name="statistic_time_steam_right">右蒸汽棒总用时:</string>
     <string name="statistic_time_steam_boiler_purge">清洗锅炉时长:</string>
-    <string name="statistic_brew_cycles_left">左研磨器圈数:</string>
-    <string name="statistic_brew_cycles_right">右研磨器圈数:</string>
-    <string name="statistic_cycles_rinse_left">Cycles Rinse Left:</string>
-    <string name="statistic_cycles_rinse_right">Cycles Rinse Right:</string>
-    <string name="statistic_milk_cycles_left">Milk Cycles Left:</string>
-    <string name="statistic_milk_cycles_right">Milk Cycles Right:</string>
-    <string name="statistic_time_milk">Time Milk:</string>
+    <string name="statistic_brew_cycles_left">左侧冲泡次数:</string>
+    <string name="statistic_brew_cycles_right">右侧冲泡次数:</string>
+    <string name="statistic_time_milk">牛奶产品时长:</string>
     <string name="statistic_heating_time_boiler_left">左锅炉加热时长:</string>
     <string name="statistic_heating_time_boiler_right">右锅炉加热时长:</string>
     <string name="statistic_heat_time_steam_boiler_1">蒸汽锅炉1加热时长:</string>
@@ -514,5 +510,9 @@
     <string name="clean_specified_time_manual">指定时间(手动洗机)</string>
     <string name="clean_no_sat_sun">周六及周日不洗机</string>
     <string name="clean_no_fri_sat">周五及周六不洗机</string>
+    <string name="statistic_cycles_rinse_left">左侧冲洗次数:</string>
+    <string name="statistic_cycles_rinse_right">右侧冲洗次数:</string>
+    <string name="statistic_milk_cycles_left">左侧打奶次数:</string>
+    <string name="statistic_milk_cycles_right">右侧打奶次数:</string>
 
 </resources>
