--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,6 +145,7 @@
     <string name="statistic_time_milk_steam_right">Time Milk Steam Right:</string>
     <string name="statistic_add">Add</string>
     <string name="statistic_maintenance_enter_description">Enter Description</string>
+    <string name="statistic_clean_enter_description">Enter Description</string>
 
     <string name="home_open_setting">Open Settings</string>
     <string name="home_clean_screen">Lock and Clean</string>
