--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -525,5 +525,9 @@
     <string name="clean_saturday">星期六</string>
     <string name="clean_sunday">星期日</string>
     <string name="clean_time_rule">开机时间需要早于关机时间</string>
+    <string name="remote_check_connection">检查连接</string>
+    <string name="remote_id">机器编号</string>
+    <string name="remote_telemetry_open">开启</string>
+    <string name="remote_telemetry_close">"关闭 "</string>
 
 </resources>
