添加机器测试牛奶部分input界面逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -390,11 +390,15 @@
     <string name="machine_test_coffee_output">Coffee Outputs Test</string>
     <string name="machine_test_steam_inputs">Steam Inputs Test</string>
     <string name="machine_test_steam_output">Steam Outputs Test</string>
+    <string name="machine_test_milk_inputs">Milk Inputs Test</string>
+    <string name="machine_test_milk_output">Milk Outputs Test</string>
     <string name="machine_test_motor_test">Motor Test</string>
     <string name="machine_test_input_test_coffee">Input Test - Coffee</string>
     <string name="machine_test_input_test_steam">Input Test - Steam</string>
+    <string name="machine_test_input_test_milk">Input Test - Milk</string>
     <string name="machine_test_output_test_coffee">Output Test - Coffee</string>
     <string name="machine_test_output_test_steam">Output Test - Steam</string>
+    <string name="machine_test_output_test_milk">Output Test - Milk</string>
     <string name="machine_test_micro_switch_left">Micro Switch Grinder Left: </string>
     <string name="machine_test_micro_switch_right">Micro Switch Grinder Right: </string>
     <string name="machine_test_bean_hopper_rear">Bean Hopper Rear: </string>
@@ -404,6 +408,12 @@
     <string name="machine_test_water_pressure">Water Pressure: </string>
     <string name="machine_test_boiler_temperature_left">Coffee Boiler Temperature Left: </string>
     <string name="machine_test_boiler_temperature_right">Coffee Boiler Temperature Right: </string>
+    <string name="machine_test_milk_temperature_left">Milk Temperature Left: </string>
+    <string name="machine_test_milk_temperature_right">Milk Temperature Right: </string>
+    <string name="machine_test_milk_tank_temperature_left">Milk Tank Temperature Left: </string>
+    <string name="machine_test_milk_tank_temperature_right">Milk Tank Temperature Right: </string>
+    <string name="machine_test_milk_detect_sensor_left">Milk Detect Sensor Left: </string>
+    <string name="machine_test_milk_detect_sensor_right">Milk Detect Sensor Right: </string>
     <string name="machine_test_flow_rate_left">Flow Rate Left: </string>
     <string name="machine_test_flow_rate_right">Flow Rate Right: </string>
     <string name="machine_test_present">Present</string>
