--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -376,11 +376,14 @@
     <string name="machine_test_coffee_output">咖啡输出测试</string>
     <string name="machine_test_steam_inputs">蒸汽输入状态</string>
     <string name="machine_test_steam_output">蒸汽输出测试</string>
+    <string name="machine_test_milk_output">牛奶输出测试</string>
     <string name="machine_test_motor_test">电机测试</string>
     <string name="machine_test_input_test_coffee">输入测试 - 咖啡系统</string>
     <string name="machine_test_input_test_steam">输入测试 - 蒸汽系统</string>
+    <string name="machine_test_input_test_milk">输入测试 - 牛奶系统</string>
     <string name="machine_test_output_test_coffee">输出测试 - 咖啡系统</string>
     <string name="machine_test_output_test_steam">输出测试 - 蒸汽系统</string>
+    <string name="machine_test_output_test_milk">输出测试 - 牛奶系统</string>
     <string name="machine_test_micro_switch_left">左边刀盘监测器: </string>
     <string name="machine_test_micro_switch_right">右边刀盘监测器: </string>
     <string name="machine_test_bean_hopper_rear">后方豆缸: </string>
@@ -390,6 +393,7 @@
     <string name="machine_test_water_pressure">水压: </string>
     <string name="machine_test_boiler_temperature_left">左侧咖啡锅炉温度: </string>
     <string name="machine_test_boiler_temperature_right">右侧咖啡锅炉温度: </string>
+    <string name="machine_test_milk_detect_sensor_right">"右侧牛奶传感器: "</string>
     <string name="machine_test_flow_rate_left">左侧流量计: </string>
     <string name="machine_test_flow_rate_right">右侧流量计: </string>
     <string name="machine_test_present">存在</string>
@@ -526,8 +530,15 @@
     <string name="clean_sunday">星期日</string>
     <string name="clean_time_rule">开机时间需要早于关机时间</string>
     <string name="remote_check_connection">检查连接</string>
+    <string name="remote_telemetry">远程检测</string>
     <string name="remote_id">机器编号</string>
     <string name="remote_telemetry_open">开启</string>
     <string name="remote_telemetry_close">"关闭 "</string>
+    <string name="machine_test_milk_inputs">牛奶输入状态</string>
+    <string name="machine_test_milk_temperature_left">"左侧牛奶系统温度: "</string>
+    <string name="machine_test_milk_temperature_right">"右侧牛奶系统温度: "</string>
+    <string name="machine_test_milk_tank_temperature_left">"左侧奶缸温度: "</string>
+    <string name="machine_test_milk_tank_temperature_right">"右侧奶缸温度: "</string>
+    <string name="machine_test_milk_detect_sensor_left">"左侧牛奶传感器: "</string>
 
 </resources>
