显示模块添加展示价格，展示产品名逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -301,6 +301,7 @@
     <string name="display_screen_brightness">Screen Brightness</string>
     <string name="display_show_extract_time">Display Extraction Time</string>
     <string name="display_show_product_name">Display Product Name</string>
+    <string name="display_show_product_price">Display Product Price</string>
     <string name="display_value_on">On</string>
     <string name="display_value_off">Off</string>
 
