--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -294,6 +294,7 @@
     <string name="display_screen_brightness">屏幕亮度</string>
     <string name="display_show_extract_time">显示萃取时间</string>
     <string name="display_show_product_name">显示产品名</string>
+    <string name="display_show_product_price">显示产品价格</string>
     <string name="display_value_on">开</string>
     <string name="display_value_off">关</string>
     <string name="display_color_red">红</string>
