配方模块添加牛奶界面逻辑

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -284,6 +284,7 @@
 
 
     <string name="formula_product_price_tips">输入产品价格</string>
+    <string name="formula_milk_click_edit">点击编辑</string>
     <string name="formula_milk_sequence">牛奶次序</string>
     <string name="formula_milk_foam_texture">牛奶泡沫质地</string>
     <string name="display_import_screen">导入图片</string>
@@ -574,8 +575,8 @@
     <string name="formula_steam_foam_mode">打奶模式</string>
     <string name="formula_steam_air_stop">空气注入停止点</string>
     <string name="formula_milk_appearance">外形</string>
-    <string name="formula_milk_white_on_top">白色在上面</string>
-    <string name="formula_milk_brown_on_top">"棕色在上面 "</string>
+    <string name="formula_milk_white_on_top">牛奶顶</string>
+    <string name="formula_milk_brown_on_top">咖啡顶</string>
     <string name="formula_milk_delay_time">牛奶延迟时间</string>
     <string name="formula_milk_output">奶品出口</string>
     <string name="formula_milk_output_coffee_outlet">咖啡出口</string>
