--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -511,6 +511,7 @@
     <string name="info_status_off">关</string>
     <string name="bean_lower_limit_grinding_capacity_rear">后方豆缸研磨容量下限值</string>
     <string name="info_status_water_pump">水泵:</string>
+    <string name="maintenance_test_oscillation">最大振荡值:</string>
     <string name="maintenance_test_standard">"标准值: "</string>
     <string name="maintenance_test_milk_test_failed">牛奶检测测试失败</string>
     <string name="clean_reset_next_clean_date">重设下次洗机日期</string>
