添加饮品列表长按响应；添加冲水长按洗机逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -208,6 +208,7 @@
     <string name="home_release_steam_attention">ATTENTION</string>
     <string name="home_release_steam_activated">Steam will be activated!</string>
     <string name="home_release_steam_wait">Releasing steam, please wait…</string>
+    <string name="home_confirm_rinse_description">Confirm to Rinse</string>
 
     <string name="settings_title">Machine Settings</string>
 
