--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -201,6 +201,7 @@
     <string name="home_release_steam_activated">蒸汽将被释放！</string>
     <string name="home_release_steam_wait">蒸汽正在释放，请稍后…</string>
 
+    <string name="home_confirm_rinse_description">点击确认开始洗机</string>
     <string name="settings_title">机器设置</string>
 
     <string name="permission_input_layout_title">登录</string>
