--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -202,6 +202,7 @@
     <string name="home_release_steam_wait">蒸汽正在释放，请稍后…</string>
 
     <string name="home_confirm_rinse_description">点击确认开始洗机</string>
+    <string name="home_wash_machine_content">点击确认开始洗机</string>
     <string name="settings_title">机器设置</string>
 
     <string name="permission_input_layout_title">登录</string>
@@ -602,5 +603,6 @@
     <string name="display_color_yellow">黄色</string>
     <string name="display_color_orange">橙色</string>
     <string name="display_color_purple">紫色</string>
+    <string name="home_wash_machine_title">洗机</string>
 
 </resources>
