--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,8 @@
     <string name="home_release_steam_activated">Steam will be activated!</string>
     <string name="home_release_steam_wait">Releasing steam, please wait…</string>
     <string name="home_confirm_rinse_description">Confirm to Rinse</string>
+    <string name="home_wash_machine_title">Wash Machine</string>
+    <string name="home_wash_machine_content">Confirm to Wash Machine</string>
 
     <string name="settings_title">Machine Settings</string>
 
